# bifrost

./: .dockerignore  .gitignore  QUICK_START_WINDOWS.md  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  generate_proto.ps1  manage.ps1  test_gateway.ps1  test_gateway.sh
api/common/v1/: common.proto
api/content/v1/: models.proto
api/content/v1/beacon/: beacon.proto
api/content/v1/forge/: forge.proto
api/content/v1/nexus/: nexus.proto
api/content/v1/oracle/: oracle.proto
api/search/v1/: mirror.proto
apps/horizon/: package.json
configs/: jaeger.yaml
docs/: API接口交互规范.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT_REPORT.md  ARCHITECTURE_CHANGES_v3.2.1.md  Blog.apifox.json  CODE_QUALITY_AUDIT.md  DOCUMENTATION_UPDATE_REPORT.md  EVENT_CONTRACT.md  FRONTEND_API.md  GJALLAR_INTEGRATION_EXAMPLE.go  GRPC_GATEWAY_GUIDE.md  HTTP_Guide.md  NATS_MESSAGING_GUIDE.md  QUICK_REFERENCE.md  RUST_UNIT_TEST_PLAN.md  Rust单元测试实施计划.md  TEST_SPECIFICATION.md  bluemap.md  code_audit_report.md  v3.2.1_CHANGELOG.md  代码审计报告.md  前端对接说明.md  测试接口.yaml  测试需求规格书.md  系统架构蓝图.md
frontend/: package.json  pnpm-lock.yaml  tsconfig.base.json
frontend/apps/helm/: IMPLEMENTATION.md  README.md  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/apps/helm/src/: App.vue
frontend/apps/helm/src-tauri/: Cargo.toml  tauri.conf.json
frontend/apps/helm/src-tauri/src/: http_client.rs  image_processor.rs  lib.rs  main.rs
frontend/apps/helm/src/assets/: main.css
frontend/apps/helm/src/components/: ImageUploader.vue
frontend/apps/helm/src/composables/: useSessionState.ts
frontend/apps/helm/src/router/: index.ts
frontend/apps/helm/src/services/: helmApi.ts
frontend/apps/helm/src/utils/: postAdapter.ts  taxonomy.ts
frontend/apps/helm/src/views/: ApiConsole.vue  AuthCenter.vue  Comments.vue  Dashboard.vue  Home.vue  Posts.vue  Profile.vue  Taxonomy.vue
frontend/apps/horizon/: ARCHITECTURE.md  README.md  nuxt.config.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/apps/horizon/assets/css/: main.css
frontend/apps/horizon/components/business/: CommentList.vue  PostCard.vue  SearchBar.vue
frontend/apps/horizon/components/layout/: Footer.vue  Header.vue
frontend/apps/horizon/composables/: useApi.ts  usePost.ts  useSearch.ts
frontend/apps/horizon/layouts/: blank.vue  default.vue
frontend/apps/horizon/pages/: index.vue
frontend/apps/horizon/pages/auth/: login.vue
frontend/apps/horizon/pages/posts/: [slug].vue
frontend/apps/horizon/pages/search/: index.vue
frontend/apps/horizon/types/: modules.d.ts  ui-tailwind.d.ts
frontend/apps/horizon/utils/: index.ts
go_services/: .dockerignore  Dockerfile  README.md  go.mod  go.sum
go_services/api/common/v1/: common.pb.go
go_services/api/content/v1/: models.pb.go
go_services/api/content/v1/beacon/: beacon.pb.go  beacon.pb.gw.go  beacon_grpc.pb.go
go_services/api/content/v1/forge/: forge.pb.go  forge.pb.gw.go  forge_grpc.pb.go
go_services/api/content/v1/nexus/: nexus.pb.go  nexus.pb.gw.go  nexus_grpc.pb.go
go_services/api/content/v1/oracle/: oracle.pb.go  oracle.pb.gw.go  oracle_grpc.pb.go
go_services/api/search/v1/: mirror.pb.go  mirror.pb.gw.go  mirror_grpc.pb.go
go_services/cmd/beacon/: main.go
go_services/cmd/gjallar/: main.go
go_services/cmd/nexus/: main.go
go_services/configs/: beacon.yaml  gjallar.yaml  nexus.yaml
go_services/internal/beacon/biz/: repo.go
go_services/internal/beacon/data/: comment.go  consumer.go  data.go  keys.go  meta.go  post.go  user.go
go_services/internal/beacon/service/: app.go  comment.go  meta.go  paging.go  post.go  user.go
go_services/internal/gjallar/handler/: search.go
go_services/internal/gjallar/infrastructure/grpc/: mirror_client.go
go_services/internal/gjallar/middleware/: auth.go  tracing.go
go_services/internal/gjallar/router/: router.go  router_grpc_gateway.go
go_services/internal/gjallar/server/: server.go
go_services/internal/nexus/biz/: biz.go  category.go  category_usecase.go  comment.go  comment_usecase.go  post.go  post_usecase.go  tag.go  tag_usecase.go  user.go  user_usecase.go
go_services/internal/nexus/data/: category.go  comment.go  comment_test.go  data.go  events.go  post.go  tag.go  transaction.go  transaction_test.go  user.go
go_services/internal/nexus/service/: app.go  category.go  comment.go  post.go  storage.go  tag.go  user.go
go_services/internal/pkg/: README.md
go_services/internal/pkg/cache/: redis.go  redis_test.go
go_services/internal/pkg/config/: base.go  beacon.go  gjallar.go  loader.go  loader_test.go  nexus.go  nexus_test.go
go_services/internal/pkg/contextx/: context.go
go_services/internal/pkg/database/: config.go  database.go  database_test.go
go_services/internal/pkg/id/: snowflake.go
go_services/internal/pkg/lifecycle/: shutdown.go
go_services/internal/pkg/messenger/: client.go  config.go  events.go  events_test.go  messenger.go
go_services/internal/pkg/middleware/: metrics_grpc.go
go_services/internal/pkg/network/breaker/: breaker.go
go_services/internal/pkg/network/grpc/: client.go  client_interceptors.go  (+8 more)
go_services/internal/pkg/security/: encryption.go  jwt.go  password.go
go_services/internal/pkg/xerr/: code.go  errors.go  factory.go
migrations/: 001_identity_and_infra.sql  002_content_core.sql  003_interactions.sql  readme.md
rust_services/: .dockerignore  Cargo.toml  Dockerfile  README.md
rust_services/common/: Cargo.toml  README.md  build.rs
rust_services/common/proto/google/api/: http.proto
rust_services/common/src/: config.rs  ctx.rs  error.rs  lib.rs  lifecycle.rs  logger.rs  metrics.rs  otel.rs  trace.rs
rust_services/common/src/nats/: client.rs  events.rs  mod.rs
rust_services/forge/: Cargo.toml
rust_services/forge/src/: engine.rs  main.rs  server.rs
rust_services/mirror/: Cargo.toml
rust_services/mirror/src/: engine.rs  main.rs  server.rs  tokenizer.rs  worker.rs
rust_services/oracle/: Cargo.toml
rust_services/oracle/src/: ingestion.rs  main.rs  server.rs  worker.rs
rust_services/oracle/src/storage/: duck.rs  mod.rs  schema.sql
(+13 files in other folders)
