[workspace]
resolver = "2"
members = [
    "common",
    "forge",
    "mirror",
    "oracle",
]

[workspace.package]
version = "3.2.0"
edition = "2021"
authors = ["Bifrost Team"]
license = "MIT"

# [关键] 依赖版本统一管理处
# 子项目引用时，不需要写版本号，直接 workspace = true
[workspace.dependencies]
# --- 内部库 ---
common = { path = "./common" }

# --- 核心异步与RPC ---
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
futures = "0.3.31"

# --- 序列化与错误处理 ---
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
anyhow = "1.0.100"
thiserror = "2.0.17"

# --- 可观测性 ---
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# --- 业务特定 (Forge/Mirror) ---
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["simd", "html"] }
ammonia = "4.1.2"
slug = "0.1.6"
tantivy = "0.25.0"

# --- 构建工具 ---
tonic-build = "0.14.2"

# --- OpenTelemetry (unified) ---
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.31.0"
tracing-opentelemetry = "0.32.0"
http = "1.4.0"
