[package]
name = "forge"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# Enable tokio signal feature for tokio::signal
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "process", "signal"] }
# Enable tonic TLS features so ServerTlsConfig/Identity/Certificate are available
tonic = { version = "0.14.2", features = ["transport", "tls-native-roots"] }
prost = "0.14.1"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter", "json"] }
tonic-health = { version = "0.14.2" }
anyhow = "1.0.100"
uuid = { version = "1.19.0", features = ["v4"] }
opentelemetry = { version = "0.31.0", features = ["trace", "metrics"] }
tracing-opentelemetry = "0.32.0"
once_cell = "1.21.3"
opendal = { version = "0.55.0", features = ["services-s3"] }
axum = "0.8.7"
prometheus = "0.14.0"
bytes = "1.11.0"
opentelemetry_sdk = { version = "0.31.0", features = ["experimental_async_runtime"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.31.0"
tonic-prost = "0.14.2"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.19"
pulldown-cmark = "0.13.0"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-onig"] }
image = { version = "0.25.9",features = ["jpeg", "png", "webp" ]}
tempfile = "3.23.0"
which = "8.0.0"
secrecy = { version = "0.10.3", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.12.2"
redis = { version = "0.27", features = ["aio", "tokio-comp", "connection-manager"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "alloc"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
