[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["time", "json"] }

# --- OpenTelemetry (upgraded) ---
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
tracing-opentelemetry = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }

http = { workspace = true }

# Needed by generated proto code (e.g., Timestamp, ProstCodec)
prost-types = { workspace = true }
tonic-prost = "0.14.2"

dotenvy = "0.15.7"
config = "0.15.19"

# NATS
async-nats = "0.45.0"

[build-dependencies]
# build.rs uses tonic_prost_build directly
tonic-prost-build = "0.14.2"
pbjson-build = "0.9.0"

