[package]
name = "forge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# 独有依赖
pulldown-cmark = { workspace = true }
ammonia = { workspace = true }
slug = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
