[package]
name = "helm"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "helm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }

# Image Processing
image = { version = "0.25", features = ["webp", "jpeg", "png"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Error Handling
anyhow = "1"

